--- a/bibliografija.bib
+++ b/bibliografija.bib
@@ -108,3 +108,11 @@ http://mirror.datacenter.by/pub/mirrors/CTAN/macros/latex/contrib/biblatex/doc/b
   journal={arXiv preprint arXiv:1601.05610},
   year={2016}
 }
+
+@inproceedings{sak2014long,
+  title={Long short-term memory recurrent neural network architectures for large scale acoustic modeling},
+  author={Sak, Ha{\c{s}}im and Senior, Andrew and Beaufays, Fran{\c{c}}oise},
+  booktitle={Fifteenth annual conference of the international speech communication association},
+  year={2014}
+}
+
