--- a/bakalaurinis.tex
+++ b/bakalaurinis.tex
@@ -467,32 +467,46 @@ Nereikia mokytis \textit{Python} programavimo kalbos, \textit{TensorFlow} biblio
 Užtenka įvaldyti VGSL kalbos sintaksines ypatybes, kad būtų įmanoma taisyklingai sudaryti neuroninį tinklą.
 
 \subsubsection{Bendrai apie LSTM}
-The LSTM contains special units called memory blocks in the
-recurrent hidden layer. The memory blocks contain memory
-cells with self-connections storing the temporal state of the network in addition to special multiplicative units called gates to
-control the flow of information. Each memory block in the original architecture contained an input gate and an output gate.
-The input gate controls the flow of input activations into the
-memory cell. The output gate controls the output flow of cell
-activations into the rest of the network. Later, the forget gate
-was added to the memory block [18]. This addressed a weakness of LSTM models preventing them from processing continuous input streams that are not segmented into subsequences.
-The forget gate scales the internal state of the cell before adding
-it as input to the cell through the self-recurrent connection of
-the cell, therefore adaptively forgetting or resetting the cell’s
-memory. In addition, the modern LSTM architecture contains
-peephole connections from its internal cells to the gates in the
-same cell to learn precise timing of the outputs [19].
-An LSTM network computes a mapping from an input
-sequence x = (x1, ..., xT ) to an output sequence y =
-(y1, ..., yT ) by calculating the network unit activations using
-the following equations iteratively from t = 1 to T:
-it = σ(Wixxt + Wimmt−1 + Wicct−1 + bi) (1)
-ft = σ(Wfxxt + Wfmmt−1 + Wf cct−1 + bf ) (2)
-ct = ft  ct−1 + it  g(Wcxxt + Wcmmt−1 + bc) (3)
-ot = σ(Woxxt + Wommt−1 + Wocct + bo) (4)
-mt = ot  h(ct) (5)
-yt = φ(Wymmt + by) (6)
-where the W terms denote weight matrices (e.g. Wix is the matrix of weights from the input gate to the input), Wic, Wf c, Woc
-are diagonal weight matrices for peephole connections, the b
+LSTM yra 
+
+The LSTM contains special units called memory blocks in the recurrent hidden layer. 
+The memory blocks contain memory cells with self-connections storing the temporal state of the network in addition to special multiplicative units called gates to control the flow of information. 
+Each memory block in the original architecture contained an input gate and an output gate.
+The input gate controls the flow of input activations into the memory cell. 
+The output gate controls the output flow of cell activations into the rest of the network. 
+Later, the forget gate was added to the memory block [18]. 
+This addressed a weakness of LSTM models preventing them from processing continuous input streams that are not segmented into subsequences.
+The forget gate scales the internal state of the cell before adding it as input to the cell through the self-recurrent connection of the cell, therefore adaptively forgetting or resetting the cell’s memory. 
+In addition, the modern LSTM architecture contains peephole connections from its internal cells to the gates in the same cell to learn precise timing of the outputs [19].
+An LSTM network computes a mapping from an input sequence 
+\begin{equation*}
+  x = (x1, ..., xT) 
+\end{equation*}
+to an output sequence 
+\begin{equation*}
+  y = (y1, ..., yT)
+\end{equation*}
+by calculating the network unit activations using the following equations iteratively from t = 1 to T:
+\begin{equation*}
+  i_t = \sigma(W_{ix}x_t + W_{im}m_{t−1} + W_{ic}c_{t−1} + b_i) (1)
+\end{equation*}
+\begin{equation*}
+  f_t = \sigma(W_{fx}x_t + W_{fm}m_{t−1} + W_{fc}c_{t−1} + b_f) (2)
+\end{equation*}
+\begin{equation*}
+  c_t = f_t \odot c_{t−1} + i_t\odot g(W_{cx}x_t + W_{cm}m_{t−1} + b_c) (3)
+\end{equation*}
+\begin{equation*}
+  o_t = \sigma(W_{ox}x_t + W_{om}m_{t−1} + W_{oc}c_t + b_o) (4)
+\end{equation*}
+\begin{equation*}
+  m_t = o_t \odot h(c_t) (5)
+\end{equation*}
+\begin{equation*}
+  y_t = \phi(W_{ym}m_t + b_y) (6)
+\end{equation*}
+
+where the W terms denote weight matrices (e.g. Wix is the matrix of weights from the input gate to the input), Wic, Wf c, Woc are diagonal weight matrices for peephole connections, the b
 terms denote bias vectors (bi is the input gate bias vector), σ is
 the logistic sigmoid function, and i, f, o and c are respectively
 the input gate, forget gate, output gate and cell activation vectors, all of which are the same size as the cell output activation
@@ -502,9 +516,10 @@ and in this paper tanh, and φ is the network output activation
 function, softmax in this paper.
 \cite{sak2014long}
 \begin{minipage}{\linewidth}
-  \includegraphics[width=12cm]{memory_blocks.png}
+  \centering
+  \includegraphics[width=12cm]{memory_block.png}
   \captionof{figure}{LSTM atminties blokai}
-  \label{memory_blocks}
+  \label{memory_block}
 \end{minipage}
 
 \subsubsubsection{Rekurentinis neuroninis tinklas}
